# FortressTradingSystem

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AMIBROKER_INTEGRATION_GUIDE.md  AMIBROKER_SETUP_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETION_REPORT.md  Dockerfile  FORTRESS_SYSTEM_SUMMARY.md  FORTRESS_TRADING_SYSTEM_REPORT_NOV25.md  FORTRESS_TRADING_SYSTEM_REPORT_NOV25copy.md  OPENALGO_COMPREHENSIVE_README.md  OPENALGO_MANUAL_AUTHENTICATION_GUIDE.md  OPENALGO_PLUGIN_FIX_GUIDE.md  OPENALGO_SYMBOL_INJECTOR_README.md  OpenAlgoPlugin-config.json  OpenAlgoPluginFixed.cpp  OpenAlgo_ATM_Scanner.afl  README.md  Rtd_Ws_AB_plugin 3.2 Changes.md  Rtd_Ws_AB_plugin 3.2 Changes1.md  Rtd_Ws_AB_plugin 3.2 Changes2.md  Run_ATM_Scanner.bat  Trade.py.txt  amibroker_data_bridge.py  amibroker_data_feed.py  amibroker_realtime_data_solution.py  analyze_responses.py  benchmark_performance.py  benchmark_results_20251116_082031.json  benchmark_results_20251116_083259.json  benchmark_system_performance.py  build_fixed_plugin.bat  build_plugin.bat  check_openalgo_db.py  check_openalgo_version.py  check_system_status.py  complete_fyers_data_manager.py  complete_integration_workflow.py  complete_system_check.py  (+165 more)
.github/workflows/: ci-cd.yml  ci.yml
.kilocode/: mcp.json
.trae/documents/: Project Status Report and Verification Plan.md
OpenAlgoPlugin-basic-plugin_sourcecode/OpenAlgoPlugin-basic-plugin/: .gitignore  LICENSE  OpenAlgo.rc  OpenAlgoConfigDlg.cpp  OpenAlgoConfigDlg.h  (+9 more)
OpenAlgoPlugin-enhanced/: Plugin.cpp  Plugin_complete.cpp  plugin_config.json
OpenAlgoPlugin-fixed/: Plugin.cpp
OpenAlgoPlugin_Enhanced/: Plugin_Enhanced.cpp  README_ENHANCED.md  build_enhanced_plugin.bat
execution_bridge/: execution_bridge.py
fortress/: .coverage  OPENALGO_API_COMPLETE_REFERENCE.md  README.md  STATUS_REPORT.md  demo_complete_system.py  openalgo_endpoints_analysis.md  pyproject.toml  test_all_openalgo_endpoints.py  test_complete_system.py  test_core_functionality.py  test_multi_timeframe.py  test_openalgo_gateway.py  test_quick_gateway.py  test_risk_integration.py  test_system.py
fortress/src/: __init__.py
fortress/src/fortress/: __init__.py  main.py
fortress/src/fortress/brain/: __init__.py  brain.py  timeframe_manager.py
fortress/src/fortress/core/: __init__.py  event_bus.py  events.py  logging.py
fortress/src/fortress/dashboard/: app.py  main.py  performance_monitor.py  startup.py  state.py
fortress/src/fortress/dashboard/routers/: api.py  web.py  ws.py
fortress/src/fortress/dashboard/static/css/: style.css
fortress/src/fortress/dashboard/static/js/: app.js
fortress/src/fortress/dashboard/templates/: base.html  index.html  performance.html  risk.html  scanner.html  symbols.html  timeframes.html
fortress/src/fortress/integrations/: __init__.py  amibroker.py  openalgo_gateway.py
fortress/src/fortress/risk_management/: __init__.py  portfolio_risk.py  position_sizer.py  risk_limits.py  risk_manager.py  strategy_risk.py
fortress/src/fortress/scanner/: __init__.py  indicators.py  rule_parser.py  scanner_config.py  scanner_engine.py
fortress/src/fortress/symbol_management/: __init__.py  contract_rollover.py  symbol_manager.py  symbol_repository.py
fortress/src/fortress/utils/: api_key_manager.py  openalgo_api_manager.py
fortress/src/fortress/worker/: __init__.py  worker.py
fortress/tests/: test_integration.py  test_risk_management.py  test_worker.py
memory_optimization_backup/: app.py.backup
monitoring/: prometheus_alerts.yml
relay_server/: openalgo_relay_server.py  start_relay.bat
sentinels/: amibroker_watcher.py  strategist.py
src/fast_math/: Cargo.toml  lib.rs
trade_server/: fyers_client_enhanced.py
(+6 files in other folders)
