[tool.poetry]
name = "sentinel-fortress-system"
version = "2.1.2"
description = "An event-driven, modular, high-performance trading system."
authors = ["Gem Sir <gem.sir@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# --- Core Frameworks ---
fyers-apiv3 = "^3.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
websockets = "^12.0"
pandas = "^2.1.3"
pytz = "^2023.3.post1"
requests = "^2.31.0"
pyzmq = "^25.1.2" # The ZMQ Nervous System
watchdog = "^3.0.0" # The File Watcher Sentinel

# --- Performance & Safety ---
# Use winloop on Windows, and uvloop on Linux/macOS
winloop = {version = "^0.1.9", platform = "win32"}
uvloop = {version = "^0.19.0", platform = "linux"}
returns = "^0.23.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
# --- The Automated Guardians ---
ruff = "^0.1.6"
mypy = "^1.7.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
bandit = "^1.7.5"
memory-profiler = "^0.61.0" # Cross-platform memory profiler

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "A", "RUF"]
ignore = []
line-length = 120

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ['openalgo/'] # Exclude original openalgo code from strict checks

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
