[project]
name = "fortress-trading-system"
version = "0.1.0"
description = "Event-driven modular monolith trading system"
authors = [
    {name = "Fortress Trading", email = "admin@fortress.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "winloop>=0.0.8; sys_platform == 'win32'",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "watchfiles>=0.21.0",
    "httpx>=0.25.2",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "asyncio-mqtt>=0.13.0",
    "schedule>=1.2.0",
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.14.0"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "pyright>=1.1.338",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fortress"]

[tool.ruff]
target-version = "py314"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"